# ophelos-data-eng-task

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
data/landing/: customers_20240115.json  transactions_20240115.csv  transactions_20240116.csv
sql/: init.sql
sql/analytics/: daily_summary.sql  merchant_performance.sql  weekly_merchant_report.sql
src/pipeline/: __init__.py  config.py  exceptions.py  ingestion.py  loader.py  main.py  transforms.py  utils.py  validation.py
tests/: conftest.py  test_transforms.py  test_validation.py
